--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,12 @@
 # wa{t::kaputt?^%!??
 
 # sudo: false
+language: osx
 script: true
 notifications:
   email: false
+env:
+  - FOO=1
+  - FOO=2
+  - FOO=3
+  - FOO=4
