--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,10 @@
 # wa{t::kaputt?^%!??
 
 sudo: false
-script: true
 notifications:
   email: false
+script: 
+  - echo "TRAVIS_PULL_REQUEST: $TRAVIS_PULL_REQUEST"
+  - echo "TRAVIS_PULL_REQUEST_BRANCH: $TRAVIS_PULL_REQUEST_BRANCH"
+  - echo "TRAVIS_PULL_REQUEST_SHA: $TRAVIS_PULL_REQUEST_SHA"
+  - echo "TRAVIS_PULL_REQUEST_SLUG: $TRAVIS_PULL_REQUEST_SLUG"
