--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,4 @@ sudo: false
 notifications:
   email: false
 script: 
-  - 'echo "TRAVIS_PULL_REQUEST: $TRAVIS_PULL_REQUEST"'
-  - 'echo "TRAVIS_PULL_REQUEST_BRANCH: $TRAVIS_PULL_REQUEST_BRANCH"'
-  - 'echo "TRAVIS_PULL_REQUEST_SHA: $TRAVIS_PULL_REQUEST_SHA"'
-  - 'echo "TRAVIS_PULL_REQUEST_SLUG: $TRAVIS_PULL_REQUEST_SLUG"'
+  - 'echo -e "TRAVIS_PULL_REQUEST: $TRAVIS_PULL_REQUEST\nTRAVIS_PULL_REQUEST_BRANCH: $TRAVIS_PULL_REQUEST_BRANCH\nTRAVIS_PULL_REQUEST_SHA: $TRAVIS_PULL_REQUEST_SHA\nTRAVIS_PULL_REQUEST_SLUG: $TRAVIS_PULL_REQUEST_SLUG"'
