--- a/.travis.yml
+++ b/.travis.yml
@@ -4,4 +4,4 @@ sudo: false
 notifications:
   email: false
 script: 
-  - 'echo -e "TRAVIS_PULL_REQUEST: $TRAVIS_PULL_REQUEST\nTRAVIS_PULL_REQUEST_BRANCH: $TRAVIS_PULL_REQUEST_BRANCH\nTRAVIS_PULL_REQUEST_SHA: $TRAVIS_PULL_REQUEST_SHA\nTRAVIS_PULL_REQUEST_SLUG: $TRAVIS_PULL_REQUEST_SLUG"'
+  - 'echo -e "TRAVIS_PULL_REQUEST: $TRAVIS_PULL_REQUEST\nTRAVIS_PULL_REQUEST_BRANCH: $TRAVIS_PULL_REQUEST_BRANCH\nTRAVIS_PULL_REQUEST_REF: $TRAVIS_PULL_REQUEST_REF\nTRAVIS_PULL_REQUEST_SHA: $TRAVIS_PULL_REQUEST_SHA\nTRAVIS_PULL_REQUEST_SLUG: $TRAVIS_PULL_REQUEST_SLUG"'
