--- a/.travis.yml
+++ b/.travis.yml
@@ -19,5 +19,11 @@ jobs:
   include:
     - stage: Compile
       script: echo Compile
+      env:
+        - FOO=
+        - BAR=
     - stage: Deploy
       script: echo Deploy
+      env:
+        - FOO=
+        - BAR=
