--- a/.travis.yml
+++ b/.travis.yml
@@ -6,20 +6,20 @@ notifications:
 
 jobs:
   include:
-    - stage: Unit tests
-      script: echo One
-    - stage: Unit tests
-      script: echo Two
-    - stage: Deploy to staging
+    - stage: unit tests
+      script: echo one
+    - stage: unit tests
+      script: echo two
+    - stage: deploy to staging
       script: skip
       deploy: &heroku
         provider: heroku
         app: sf-stages-staging
         api_key: $HEROKU_AUTH_TOKEN
         on: sf-stages-demo
-    - stage: Test staging
+    - stage: test staging
       script: 'curl http://sf-stages-staging.herokuapp.com'
-    - stage: Deploy to production
+    - stage: deploy to production
       script: /bin/true
       deploy:
         <<: *heroku
