--- a/.travis.yml
+++ b/.travis.yml
@@ -19,3 +19,15 @@ jobs:
         on: sf-stages-demo
     - stage: test staging
       script: 'curl http://sf-stages-staging.herokuapp.com'
+jobs:
+  include:
+    - script: echo 1
+    - script: echo 2
+    - stage: deploy
+      script: skip
+      deploy: &heroku
+        provider: heroku
+        app: sf-stages-staging
+        api_key: $HEROKU_AUTH_TOKEN
+        on: sf-stages-demo
+    - script: echo 3
