--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ script:
     - echo $SECRET_1
     - echo $SECRET_2
     - bash ./wat
+    - false
 
 notifications:
-    email: always
+    email: true
