--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,9 @@
 stages:
-  - before
-  - test
-  - after
-rvm:
-  - 2.3
-  - 2.4
-jobs:
+  - name: one
+    if: branch = main
+  - two
+matrix:
   include:
-    - stage: before
-      rvm: 2.4
-    - stage: after
-      rvm: 2.4
-  allow_failures:
-    - rvm: 2.3
-script: "if [\"$(ruby -v)\" = \"ruby 2.3.4p301 (2017-03-30 revision 58214) [x86_64-linux]\"]; then /bin/false; else /bin/true; fi"
+    - stage: one
+    - stage: one
+    - stage: two
