--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,19 @@
-stages:
-  - name: one
-    if: branch = test
-  - name: two
-jobs:
+matrix:
   include:
-    - stage: one
-    - stage: two
-    - stage: two
-    - stage: two
-      if: branch = test
+    - stage: alpha
+
+    - stage: bravo
+      env: FOO=0
+    - env: FOO=1
+    - env: FOO=2
+    - env: FOO=3
+    - env: FOO=4
+    - env: FOO=5
+    - env: FOO=6
+    - env: FOO=7
+    - env: FOO=8
+    - env: FOO=9
+
+    - stage: charlie
+
 script: echo FOO
