--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,9 @@
 language: ruby
+
 rvm:
-  - '2.2'
-  - '2.3'
-env:
-  - FOO=1
-  - FOO=2
-matrix:
-  foo: true
+  - '2.4.0'
+  - '2.4'
+
 jobs:
   include:
-    - stage: w00t!
-      script: echo true
+    - script: echo foo
