--- a/.travis.yml
+++ b/.travis.yml
@@ -1,2 +1,17 @@
+dist: trusty
+sudo: false
+language: python
+
+stages:
+  - name: Test
+  - name: Deploy
+    if: tag IS present
+
+jobs:
+  include:
+  - python: 3.5
+  - python: 3.6
+  - stage: Deploy
+    script: echo deploy
+
 script: echo test
-if: type IN (api)
