--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,11 @@ stages:
 
 jobs:
   include:
+    - stage: preflight
+      script: echo preflight
     - stage: test
-      script: echo test
+      script: echo test 1
+    - stage: test
+      script: echo test 2
     - stage: deploy
       script: echo deploy
