--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,17 @@
+stages:
+  - "test"
+  - ":ship: it to Quay.io"
+
 jobs:
+  allow_failures:
+    - script: echo "./script/docker-build-and-push"
+    - script: echo "bundle exec rake update_static_files"
   include:
-    - script: echo preflight
-    - script: echo test 1
-    - script: echo test 2
-    - script: echo deploy
+    - stage: "test"
+      env:
+        script: echo "./script/validate-example-payloads-with-docker"
+    - stage: "test update_static_files Rake task"
+      script: echo "bundle exec rake update_static_files"
+    - stage: ":ship: it to Quay.io"
+      env:
+        script: echo "./script/docker-build-and-push"
