--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,11 @@
 stages:
-  - "test"
-  - "test update_static_files Rake task"
-  - ":ship: it to Quay.io"
+  - one
+  - two
+    if: fork = false
 
 jobs:
-  allow_failures:
-    - script: echo "./script/docker-build-and-push"
-    - script: echo "bundle exec rake update_static_files"
   include:
-    - stage: "test"
-      env:
-        script: echo "./script/validate-example-payloads-with-docker"
-    - stage: "test update_static_files Rake task"
-      script: echo "bundle exec rake update_static_files"
-    - stage: ":ship: it to Quay.io"
-      env:
-        script: echo "./script/docker-build-and-push"
+    - stage: one
+      script: echo one
+    - stage: two
+      script: echo two
