--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 sudo: false
 script:
 - echo '#!/bin/bash' >> job.sh
+- echo set -x >> job.sh
 - echo set -e >> job.sh
 - echo false >> job.sh
 - echo true >> job.sh
